--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
       <span class="card-name">MTK Clicker Mafia</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +1M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -616,13 +616,15 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="https://t.me/topcoin_me_bot?start=r_6299245973" class="card">
+  <a href="https://t.me/topcoin_me_bot?start=r_6299245973" class="card" id="card2">
+
+        <div class="icon"><img src="trend.svg" width="32" height="32"></div>
     <div class="card-header">
       <img src="icons/topcoin.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Top Coin</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +2M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -636,7 +638,7 @@
       <span class="card-name">True Coin</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +200K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -756,13 +758,15 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="https://t.me/Shuttle_ton_bot?start=r_6299245973" class="card">
+  <a href="https://t.me/Shuttle_ton_bot?start=r_6299245973" class="card" id="card2">
+
+        <div class="icon"><img src="trend.svg" width="32" height="32"></div>
     <div class="card-header">
       <img src="icons/shuttle.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Shuttle</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +3M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -818,7 +822,7 @@
       <span class="card-name">Earth Coin</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +400K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -897,13 +901,15 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="https://t.me/realyescoinbot?start=r_6299245973" class="card">
+  <a href="https://t.me/realyescoinbot?start=r_6299245973" class="card" id="card2">
+
+        <div class="icon"><img src="trend.svg" width="32" height="32"></div>
     <div class="card-header">
       <img src="icons/yescoin2.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Real Yescoin</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +6M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -990,7 +996,7 @@
       <span class="card-name">Roketo Lunar</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +150K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -1004,7 +1010,7 @@
       <span class="card-name">Zargates Retrodrop</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +200K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -1021,7 +1027,7 @@
       <span class="card-name">Hold Wallet</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +1M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -1029,13 +1035,14 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="https://t.me/drumtap_bot?start=1716917986497184" class="card">
+  <a href="https://t.me/drumtap_bot?start=1716917986497184" class="card" id="card2">
+        <div class="icon"><img src="trend.svg" width="32" height="32"></div>
     <div class="card-header">
       <img src="icons/wigwam.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Wigwam Drum</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +2M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -1049,7 +1056,7 @@
       <span class="card-name">Drop Hunter</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +400K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -1057,13 +1064,15 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="https://t.me/cedex_tap_bot?start=1717691568634519" class="card">
+  <a href="https://t.me/cedex_tap_bot?start=1717691568634519" class="card" id="card2">
+
+        <div class="icon"><img src="trend.svg" width="32" height="32"></div>
     <div class="card-header">
       <img src="icons/cedex.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Cedex Tap</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +2M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -1077,7 +1086,7 @@
       <span class="card-name">Spell Wallet</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +350K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -1091,7 +1100,7 @@
       <span class="card-name">Chance Drip</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +200K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -1105,7 +1114,7 @@
       <span class="card-name">BFD Coin</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +600K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -1216,7 +1225,7 @@
       <span class="card-name">Bitton</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +500K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -1244,7 +1253,7 @@
       <span class="card-name">Lime Coin</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +500K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -1272,7 +1281,7 @@
       <span class="card-name">Click Arbuz</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +500K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -1286,7 +1295,7 @@
       <span class="card-name">Pepe Miner</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +2M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -1301,7 +1310,7 @@
       <span class="card-name">Pig Coin</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +20K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
