--- a/index.html
+++ b/index.html
@@ -1349,7 +1349,22 @@
 
 
 
+<!-- Repeat this block for each card -->
+  <a href="https://t.me/pulsegame_bot?start=u_00bc05ad485b9fc3" class="card">
+    <div class="card-header">
+      <img src="icons/pulse.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Pulse Game</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +100K</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
 
+
+
+  
 
   
 
