--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </div>
 
 <div class="search-container" style="text-align: center;">
-  <input type="text" class="search-box" placeholder="Search..." oninput="searchCard()">
+  <input type="search" class="search-box" placeholder="Search..." oninput="searchCard()">
 </div>
 <div class="card-container" id="card-container"  >
 
