--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
     <!-- Repeat this block for each card -->
   <a href="https://t.me/TimeFarmCryptoBot?start=Iz82M8Mgcpej6OCo" class="card" id="card2">
 
-    <img src="icons/hamster.jpg" alt="Card Logo" class="card-logo">
+    <div class="icon"><img src="trend.svg" width="32" height="32"></div>
     <div class="card-header">
       <img src="icons/timefarm.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Time Farm</span>
