--- a/index.html
+++ b/index.html
@@ -1558,6 +1558,11 @@ sortCards();
 
 
 
+  document.addEventListener("DOMContentLoaded", function() {
+    window.scrollTo(0, 0);
+});
+
+
 
 </script>
 
