--- a/index.html
+++ b/index.html
@@ -44,6 +44,112 @@
 
 </ul>
 
+
+
+
+      <!-- Repeat this block for each card -->
+  <a href="https://t.me/TheBaboon_Bot?start=r_6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/baboon.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Baboon</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +1M</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+      <!-- Repeat this block for each card -->
+  <a href="https://t.me/herewalletbot/app?startapp=833483" class="card">
+    <div class="card-header">
+      <img src="icons/hot.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Near HOT</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +10M</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+      <!-- Repeat this block for each card -->
+  <a href="https://t.me/MozoAI_bot?start=TkUjdB7N" class="card">
+    <div class="card-header">
+      <img src="icons/mozo.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Mozo</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +100K</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+      <!-- Repeat this block for each card -->
+  <a href="https://t.me/MMproBump_bot?start=ref_6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/bump.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Bump</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +2M</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+        <!-- Repeat this block for each card -->
+  <a href="https://t.me/theHoldCoinBot/app?startapp=ref_PkrUKN54" class="card">
+    <div class="card-header">
+      <img src="icons/hold.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Hold Coin</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +1M</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+        <!-- Repeat this block for each card -->
+  <a href="https://t.me/FastXParkingBot?start=6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/fastx.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">FastX</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +100K</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+
+    <!-- Repeat this block for each card -->
+  <a href="https://t.me/metaland_bot/click?startapp=6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/memeland.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">MemeLand</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +1M</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+  
+
+
+
+  
+
   
 <div class="card-container" id="card-container"  >
 
