--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="https://t.me/onchaincoin_bot?start=user_6299245973" class="card">
+  <a href="https://t.me/onchaincoin_bot?start=user_6299245973" class="card" id="card3">
 
       
     <div class="card-header">
@@ -432,7 +432,7 @@
     </div>
     <div class="card-info">
 <div>Total Players: +3M</div>
-      <div><span class="status-light gray"></span><b>Pending</b></div>
+      <div>✅ <b>Listed</b></div>
     </div>
   </a>
   <!-- End of card block -->
