--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
 
 <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0 />  -->
-<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+<!-- <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">  -->
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<meta name="HandheldFriendly" content="true" />
+
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
