--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0 />  -->
 <!-- <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">  -->
-
+<!-- Disable Pinch Zoom on Mobile Web -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <meta name="HandheldFriendly" content="true" />
 
