--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <div class="card-info">
 <div>Total Players: +1M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
+      <img src="icons/verify.gif" alt="Icon">
     </div>
   </a>
   <!-- End of card block -->
