--- a/index.html
+++ b/index.html
@@ -391,7 +391,9 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="https://t.me/cexio_tap_bot?start=1716285067582801" class="card">
+  <a href="https://t.me/cexio_tap_bot?start=1716285067582801" class="card" id="card2">
+    
+    <div class="icon"><img src="trend.svg" width="32" height="32"></div>
     <div class="card-header">
       <img src="icons/cexio.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">CEX IO</span>
