--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 
 
       <!-- Repeat this block for each card -->
-  <a href="https://t.me/TheBaboon_Bot?start=r_6299245973" class="card">
+  <a href="https://t.me/TheBaboon_Bot?start=r_6299245973" class="card" id="card2">
+    
+    <div class="icon"><img src="trend.svg" width="32" height="32"></div>
     <div class="card-header">
       <img src="icons/baboon.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Baboon</span>
@@ -81,7 +83,9 @@
 
 
       <!-- Repeat this block for each card -->
-  <a href="https://t.me/MMproBump_bot?start=ref_6299245973" class="card">
+  <a href="https://t.me/MMproBump_bot?start=ref_6299245973" class="card" id="card2">
+
+    <div class="icon"><img src="trend.svg" width="32" height="32"></div>
     <div class="card-header">
       <img src="icons/bump.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Bump</span>
