--- a/index.html
+++ b/index.html
@@ -1562,6 +1562,12 @@
 </div>
 
 
+
+   <a href='http://www.freevisitorcounters.com'>click here</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=da2583ef12b1df77c34d12143aa272f048642b37'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1196916/t/0"></script>
+  
+
+
 <p align="center" style="color:white;"> @Cointapz copyright all rights reserved </p>
 
 <div class="to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})"><img src="up.svg" width="24" height="24"></div>
