--- a/index.html
+++ b/index.html
@@ -1563,7 +1563,7 @@
 
 
 
-   <a href='http://www.freevisitorcounters.com'>click here</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=da2583ef12b1df77c34d12143aa272f048642b37'></script>
+<script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=da2583ef12b1df77c34d12143aa272f048642b37'></script>
 <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1196916/t/0"></script>
   
 
