--- a/index.html
+++ b/index.html
@@ -1561,7 +1561,10 @@
   
 </div>
 
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-d1a48ab8-1b3b-4356-b2d5-9e6eee10efc9" data-elfsight-app-lazy></div>
 
+  
 
 <p align="center" style="color:white;"> @Cointapz copyright all rights reserved </p>
 
