--- a/index.html
+++ b/index.html
@@ -67,6 +67,62 @@
   <!-- End of card block -->
 
 
+        <!-- Repeat this block for each card -->
+  <a href="http://t.me/chaincrops_bot?start=6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/chaincrops.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Chain Crops</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +700K</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+        <!-- Repeat this block for each card -->
+  <a href="https://t.me/NOTMEMEAppBot?start=fj5h8j" class="card">
+    <div class="card-header">
+      <img src="icons/notmeme.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">NotMeme</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +1M</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+        <!-- Repeat this block for each card -->
+  <a href="https://t.me/moon_land_bot/to_the_moon?startapp=6BVJ94A" class="card">
+    <div class="card-header">
+      <img src="icons/tothemoon.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">To The Moon</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +200K</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+      <!-- Repeat this block for each card -->
+  <a href="https://t.me/NOTAI_App_Bot/notai?startapp=2uOBoFCygASfVzz" class="card">
+    <div class="card-header">
+      <img src="icons/notai.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">NotAI</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +500K</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+  
 
       <!-- Repeat this block for each card -->
   <a href="https://t.me/MozoAI_bot?start=TkUjdB7N" class="card">
