--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <div class="description">
   <p>A Big List of Tap Bots Are Here! Enjoy 😉
-  <pre>📅 Last Update: June 2024</pre>
+  <pre>📅 Last Update: June 2024      <p id="botsCount"> Bots Count:</p></pre>
   </p>
   <p>به کانال خودتون هم سر بزنید، کلی اخبار جذاب داریم</p>
 </div>
@@ -1722,6 +1722,12 @@ function sortCards() {
 sortCards();
 
 
+
+//  count all cards
+
+          const cardHeaders = document.querySelectorAll('div.card-header');
+        const numberOfCardHeaders = cardHeaders.length;
+        document.getElementById('botsCount').textContent = `Bots Count: ${numberOfCardHeaders}`;
 
 
 
