--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <div class="description">
   <p>A Big List of Tap Bots Are Here! Enjoy 😉
-  <pre>📅 Last Update: June 2024<pre id="botsCount">Bots Count:</pre></pre>
+  <pre>📅 Last Update: June 2024<pre id="botsCount"></pre></pre>
   </p>
   <p>به کانال خودتون هم سر بزنید، کلی اخبار جذاب داریم</p>
 </div>
@@ -1727,7 +1727,7 @@ sortCards();
 
           const cardHeaders = document.querySelectorAll('div.card-header');
         const numberOfCardHeaders = cardHeaders.length;
-        document.getElementById('botsCount').textContent = `Bots Count: ${numberOfCardHeaders}`;
+        document.getElementById('botsCount').textContent = `🔢 Bots Count: ${numberOfCardHeaders}`;
 
 
 
