--- a/index.html
+++ b/index.html
@@ -1727,7 +1727,7 @@ sortCards();
 
           const cardHeaders = document.querySelectorAll('div.card-header');
         const numberOfCardHeaders = cardHeaders.length;
-        document.getElementById('botsCount').textContent = `🔢 Bots Count: ${numberOfCardHeaders}`;
+        document.getElementById('botsCount').textContent = `🔢 Total Bots Count: ${numberOfCardHeaders}`;
 
 
 
