--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <div class="description">
   <p>A Big List of Tap Bots Are Here! Enjoy 😉
-  <pre>📅 Last Update: June 2024🔢 <pre id="botsCount"></pre></pre>
+  <pre>📅 Last Update: June 2024<pre id="botsCount"></pre></pre>
   </p>
   <p>به کانال خودتون هم سر بزنید، کلی اخبار جذاب داریم</p>
 </div>
