--- a/index.html
+++ b/index.html
@@ -1617,7 +1617,10 @@
   
 </div>
 
-  
+<div align="center">
+<script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=302f1933c42e94b88778345c91683733cc8d1baf'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1197285/t/1"></script>
+</div> 
 
 <p align="center" style="color:white;"> @Cointapz copyright all rights reserved </p>
 
