--- a/index.html
+++ b/index.html
@@ -1617,7 +1617,7 @@
   
 </div>
 
-<div style="display: none; align="center">
+<div  align="center">
  <a href='http://www.freevisitorcounters.com'>click here</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=c1574d06728361f25b61a514aa1749fbd9e3d02a'></script>
 <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1197288/t/0"></script>
 
