--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <span class="card-name">Bump</span>
     </div>
     <div class="card-info">
-<div>Total Players: +2M</div>
+<div>Total Players: +3M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -332,7 +332,7 @@
       <span class="card-name">Catizen</span>
     </div>
     <div class="card-info">
-<div>Total Players: +20M</div>
+<div>Total Players: +30M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
             <img src="icons/verify.gif" class="verify">
     </div>
@@ -715,7 +715,9 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="https://t.me/wormfare_slap_bot?start=r_6299245973" class="card">
+  <a href="https://t.me/wormfare_slap_bot?start=r_6299245973" class="card" id="card2">
+
+    <div class="icon"><img src="trend.svg" width="32" height="32"></div>
     <div class="card-header">
       <img src="icons/wormfare.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Wormfare Slap</span>
@@ -723,6 +725,7 @@
     <div class="card-info">
 <div>Total Players: +1M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
+      <img src="icons/verify.gif" class="verify">
     </div>
   </a>
   <!-- End of card block -->
