--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
       <span class="card-name">Simple Coin</span>
     </div>
     <div class="card-info">
-<div>Total Players: +500K</div>
+<div>Total Players: +2M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
