--- a/index.html
+++ b/index.html
@@ -848,9 +848,7 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="https://t.me/topcoin_me_bot?start=r_6299245973" class="card" id="card2">
-
-        <div class="icon"><img src="trend.svg" width="32" height="32"></div>
+  <a href="https://t.me/topcoin_me_bot?start=r_6299245973" class="card">
     <div class="card-header">
       <img src="icons/topcoin.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Top Coin</span>
