--- a/index.html
+++ b/index.html
@@ -41,14 +41,24 @@
   <input type="search" class="search-box" placeholder="Search..." oninput="searchCard()">
 </div>
 
-  <ul class="nav">
-    <li class="nav-item active" id="showAll">All</li> <!-- New item -->
-    <li class="nav-item" id="option2">Trend</li>
-    <li class="nav-item" id="option3">Listed</li>
-
-</ul>
 
 
+    <div class="navbar">
+        <div class="nav-item active" id="showAll">
+            <div class="nav-icon">🏠</div>
+            <div class="nav-text">All</div>
+        </div>
+        <div class="nav-item"  id="option2">
+            <div class="nav-icon">🔥</div>
+            <div class="nav-text">Trend</div>
+        </div>
+        <div class="nav-item"  id="option3">
+            <div class="nav-icon">📊</div>
+            <div class="nav-text">Listed</div>
+        </div>
+    </div>
+
+  
 
 
       <!-- Repeat this block for each card -->
