--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             <div class="nav-text">All</div>
         </div>
         <div class="nav-item"  id="option2">
-            <div class="nav-icon">🔥</div>
+            <div class="nav-icon">🚀</div>
             <div class="nav-text">Trend</div>
         </div>
         <div class="nav-item"  id="option3">
-            <div class="nav-icon">📊</div>
+            <div class="nav-icon">⚡️</div>
             <div class="nav-text">Listed</div>
         </div>
     </div>
