--- a/index.html
+++ b/index.html
@@ -77,6 +77,34 @@
   <!-- End of card block -->
 
 
+          <!-- Repeat this block for each card -->
+  <a href="http://t.me/grandcombat_bot/start?startapp=sG2Ye2Jel7" class="card">
+    <div class="card-header">
+      <img src="icons/grandcombat.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Grand Combat</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +100K</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+            <!-- Repeat this block for each card -->
+  <a href="https://t.me/DiamoreCryptoBot/app?startapp=6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/diamore.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Diamore</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +100K</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+  
+
         <!-- Repeat this block for each card -->
   <a href="http://t.me/chaincrops_bot?start=6299245973" class="card">
     <div class="card-header">
