--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 </div>
 
 
+      <div class="gradient-div"></div>
+
+
 
     <div class="navbar">
         <div class="nav-item active" id="showAll">
