--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
   <a href="https://t.me/cointapz"><img src="logo.png" alt="Logo" class="logo"></a>
 <!--  <div class="back-icon" onclick="history.back()"><img src="back.png" width="24" height="24"></div>   -->
 </div>
+  
+
+<div class="">
+<img src="elements.png">
+</div>
+  
 
 <div class="description">
   <p>A Big List of Tap Bots Are Here! Enjoy 😉
