--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
 </div>
   
 
-<div class="">
-<img src="elements.png">
-</div>
+<img src="element.png" alt="Element" class="responsive-image">
   
 
 <div class="description">
