--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
 <div class="header">
   <a href="https://t.me/cointapz"><img src="logo.png" alt="Logo" class="logo"></a>
-<!--  <div class="back-icon" onclick="history.back()"><img src="back.png" width="24" height="24"></div>   -->
+ <div class="left-header" >📅 June 2024</div> 
+ <div class="right-header" ><pre id="botsCount"></pre></div> 
 </div>
   
 
