--- a/index.html
+++ b/index.html
@@ -1778,7 +1778,7 @@ sortCards();
 
           const cardHeaders = document.querySelectorAll('div.card-header');
         const numberOfCardHeaders = cardHeaders.length;
-        document.getElementById('botsCount').textContent = `🔢 Total Bot Count: ${numberOfCardHeaders}`;
+        document.getElementById('botsCount').textContent = `🤖 Count: ${numberOfCardHeaders}`;
 
 
 
