--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="header">
   <a href="https://t.me/cointapz"><img src="logo.png" alt="Logo" class="logo"></a>
  <div class="left-header" >📅 June 2024</div> 
- <div class="right-header" ><pre id="botsCount"></pre></div> 
+ <div class="right-header" ><div id="botsCount"></div></div> 
 </div>
   
 
