--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <div class="header">
   <a href="https://t.me/cointapz"><img src="logo.png" alt="Logo" class="logo"></a>
- <div class="left-header" >📅 June 2024</div> 
+<div class="left-header" >📅 June 2024</div> 
  <div class="right-header" ><div id="botsCount"></div></div> 
 </div>
   
@@ -36,10 +36,12 @@
   
 
 <div class="description">
-  <p>A Big List of Tap Bots Are Here! Enjoy 😉
+  <p>A Big List of Tap Bots Are Here! Enjoy 😉 </p>
+      <p>به کانال خودتون هم سر بزنید، کلی اخبار جذاب داریم</p>
+    <!-- 
   <pre>📅 Last Update: June 2024<pre id="botsCount"></pre></pre>
-  </p>
-  <p>به کانال خودتون هم سر بزنید، کلی اخبار جذاب داریم</p>
+   !-->
+
 </div>
 
 <div class="search-container" style="text-align: center;">
