--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   
 
 <div class="description">
-  <p>A Big List of Tap Bots Are Here! Enjoy 😉 </p>
+  <p><b>Telegram Crypto Mining Bots</b>to Maximize Your Earnings 😉 </p>
       <p>به کانال خودتون هم سر بزنید، کلی اخبار جذاب داریم</p>
     <!-- 
   <pre>📅 Last Update: June 2024<pre id="botsCount"></pre></pre>
