--- a/index.html
+++ b/index.html
@@ -1780,7 +1780,7 @@ sortCards();
 
           const cardHeaders = document.querySelectorAll('div.card-header');
         const numberOfCardHeaders = cardHeaders.length;
-        document.getElementById('botsCount').textContent = `🤖 Bots ${numberOfCardHeaders}`;
+        document.getElementById('botsCount').textContent = `🤖 ${numberOfCardHeaders} Bots`;
 
 
 
