--- a/index.html
+++ b/index.html
@@ -101,6 +101,20 @@
   <!-- End of card block -->
 
 
+  <!-- Repeat this block for each card -->
+  <a href="https://t.me/onus_tap_tap_tap_bot?start=1726024060355" class="card">
+    <div class="card-header">
+      <img src="icons/onus.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Onus Tap</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +1M</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
             <!-- Repeat this block for each card -->
   <a href="https://t.me/DiamoreCryptoBot/app?startapp=6299245973" class="card">
     <div class="card-header">
