--- a/index.html
+++ b/index.html
@@ -68,7 +68,22 @@
         </div>
     </div>
 
-  
+
+
+  <!-- Repeat this block for each card -->
+  <a href="https://t.me/rocky_rabbit_bot/play?startapp=frId6299245973" class="card" id="card2">
+    
+    <div class="icon"><img src="trend.svg" width="32" height="32"></div>
+    <div class="card-header">
+      <img src="icons/rabbit.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Rocky Rabbit</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +2M</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
 
 
       <!-- Repeat this block for each card -->
