--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
     </div>
     <div class="card-info">
 <div>Total Players: +500K</div>
-      <div><span class="status-light green"></span><b>Active</b></div>
+      <div><span class="status-light red"></span><b>Scam</b></div>
     </div>
   </a>
   <!-- End of card block -->
