--- a/index.html
+++ b/index.html
@@ -869,6 +869,7 @@
 
     <!-- Repeat this block for each card -->
   <a href="https://t.me/Prickgame_bot?start=ref-sSNVbUz568ZEVkXqjQNXoa" class="card">
+        <div class="icon"><img src="scam.png" width="64"></div>
     <div class="card-header">
       <img src="icons/prick.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Prick</span>
