--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   
 
 <div class="description">
-  <p>Telegram Crypto Mining Bots to Maximize Your Earnings 😉 </p>
-      <p>به کانال خودتون هم سر بزنید، کلی اخبار جذاب داریم</p>
+  <p>Telegram Crypto Mining Bots to Maximize Your Earnings 😉<br>
+   به کانال خودتون هم سر بزنید، کلی اخبار جذاب داریم</p>
     <!-- 
   <pre>📅 Last Update: June 2024<pre id="botsCount"></pre></pre>
    !-->
