--- a/index.html
+++ b/index.html
@@ -1661,7 +1661,7 @@
     </div>
     <div class="card-info">
 <div>Total Players: +100K</div>
-      <div><span class="status-light green"></span><b>Active</b></div>
+      <div><span class="status-light gray"></span><b>Pending</b></div>
     </div>
   </a>
   <!-- End of card block -->
