--- a/index.html
+++ b/index.html
@@ -377,6 +377,25 @@
   </a>
   <!-- End of card block -->
 
+
+
+      <!-- Repeat this block for each card -->
+  <a href="https://t.me/major/start?startapp=6299245973" class="card" id="card2">
+    
+    <div class="icon"><img src="trend.svg" width="32" height="32"></div>
+    <div class="card-header">
+      
+      <img src="icons/major.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Major</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +2M</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+            <img src="icons/verify.gif" class="verify">
+    </div>
+  </a>
+  <!-- End of card block -->
+
   
   <!-- Repeat this block for each card -->
   <a href="https://t.me/tapswap_bot?start=r_6299245973" class="card" id="card2">
