--- a/index.html
+++ b/index.html
@@ -550,11 +550,12 @@
   <a href="https://t.me/herewalletbot/app?startapp=833483" class="card">
     <div class="card-header">
       <img src="icons/hot.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">Near HOT</span>
+      <span class="card-name">HOT Wallet</span>
     </div>
     <div class="card-info">
 <div>Total Players: +10M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
+           <img src="icons/verify.gif" class="verify">
     </div>
   </a>
   <!-- End of card block -->
