--- a/index.html
+++ b/index.html
@@ -959,13 +959,29 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="https://t.me/topcoin_me_bot?start=r_6299245973" class="card">
+  <a href="https://t.me/NotBoredPuppies_bot?start=r_6299245973" class="card" id="card2">
+
+        <div class="icon"><img src="trend.svg" width="32" height="32"></div>
     <div class="card-header">
-      <img src="icons/topcoin.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">Top Coin</span>
+      <img src="icons/notbored.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Not Bored Puppies</span>
     </div>
     <div class="card-info">
-<div>Total Players: +2M</div>
+<div>Total Players: +5M</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+        <!-- Repeat this block for each card -->
+  <a href="https://t.me/BIRDTonBot?start=6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/birdton.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Bird Ton</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +200K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
