--- a/index.html
+++ b/index.html
@@ -1277,7 +1277,7 @@
   <a href="https://t.me/TapCoinsBot?start=ref_PWcWf6" class="card">
     <div class="card-header">
       <img src="icons/tapcoin.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">Tapcoin</span>
+      <span class="card-name">Tapcoins</span>
     </div>
     <div class="card-info">
 <div>Total Players: +500K</div>
