--- a/index.html
+++ b/index.html
@@ -1421,9 +1421,9 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="https://t.me/cedex_tap_bot?start=1717691568634519" class="card" id="card2">
+  <a href="https://t.me/cedex_tap_bot?start=1717691568634519" class="card">
 
-        <div class="icon"><img src="trend.svg" width="32" height="32"></div>
+      
     <div class="card-header">
       <img src="icons/cedex.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Cedex Tap</span>
