--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
     </div>
     <div class="card-info">
 <div>Total Players: +240M</div>
-      <div><span class="status-light green"></span><b>Active</b></div>
+      <div><img src="icons/rings.svg" class="live"></div>
             <img src="icons/verify.gif" class="verify">
     </div>
   </a>
