--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
     </div>
     <div class="card-info">
 <div>Total Players: +240M</div>
-      <div><img src="rings.svg" class="live"><b>Active</b></div>
+      <div class="active-section"><img src="rings.svg" class="live"><b>Active</b></div>
             <img src="icons/verify.gif" class="verify">
     </div>
   </a>
