--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
     <div class="card-info">
 <div>Total Players: +240M</div>
       <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
-            <img src="icons/verify.svg" class="verify">
+            <img src="verify.svg" class="verify">
     </div>
   </a>
   <!-- End of card block -->
@@ -391,7 +391,7 @@
     <div class="card-info">
 <div>Total Players: +2M</div>
       <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
-            <img src="icons/verify.svg" class="verify">
+            <img src="verify.svg" class="verify">
     </div>
   </a>
   <!-- End of card block -->
@@ -409,7 +409,7 @@
     <div class="card-info">
 <div>Total Players: +60M</div>
       <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
-            <img src="icons/verify.svg" class="verify">
+            <img src="verify.svg" class="verify">
     </div>
   </a>
   <!-- End of card block -->
@@ -427,7 +427,7 @@
     <div class="card-info">
 <div>Total Players: +35M</div>
       <div>✅ <b>Listed</b></div>
-            <img src="icons/verify.svg" class="verify">
+            <img src="verify.svg" class="verify">
     </div>
   </a>
   <!-- End of card block -->
@@ -444,7 +444,7 @@
     <div class="card-info">
 <div>Total Players: +23M</div>
       <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
-            <img src="icons/verify.svg" class="verify">
+            <img src="verify.svg" class="verify">
     </div>
   </a>
   <!-- End of card block -->
@@ -463,7 +463,7 @@
     <div class="card-info">
 <div>Total Players: +20M</div>
       <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
-            <img src="icons/verify.svg" class="verify">
+            <img src="verify.svg" class="verify">
     </div>
   </a>
   <!-- End of card block -->
@@ -510,7 +510,7 @@
     <div class="card-info">
 <div>Total Players: +30M</div>
       <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
-            <img src="icons/verify.svg" class="verify">
+            <img src="verify.svg" class="verify">
     </div>
   </a>
   <!-- End of card block -->
@@ -555,7 +555,7 @@
     <div class="card-info">
 <div>Total Players: +10M</div>
       <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
-           <img src="icons/verify.svg" class="verify">
+           <img src="verify.svg" class="verify">
     </div>
   </a>
   <!-- End of card block -->
@@ -572,7 +572,7 @@
     <div class="card-info">
 <div>Total Players: +13M</div>
       <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
-            <img src="icons/verify.svg" class="verify">
+            <img src="verify.svg" class="verify">
     </div>
   </a>
   <!-- End of card block -->
@@ -660,7 +660,7 @@
     <div class="card-info">
 <div>Total Players: +80M</div>
       <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
-            <img src="icons/verify.svg" class="verify">
+            <img src="verify.svg" class="verify">
     </div>
   </a>
   <!-- End of card block -->
@@ -836,7 +836,7 @@
     <div class="card-info">
 <div>Total Players: +1M</div>
       <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
-      <img src="icons/verify.svg" class="verify">
+      <img src="verify.svg" class="verify">
     </div>
   </a>
   <!-- End of card block -->
