--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
   
 
 <img src="element.png" alt="Element" class="responsive-image">
-  
+
+
+      <h1>Cointapz is <span></span></h1>
 
 <div class="description">
   <div>Telegram Crypto Mining Bots to Maximize Your Earnings 😉<br>
@@ -1756,6 +1758,46 @@
 <div class="to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})"><img src="up.svg" width="24" height="24"></div>
 
 <script>
+
+
+const dynamicText = document.querySelector("h1 span");
+const words = ["Love", "Like No One Else", "the Future", "Everything"];
+
+// Variables to track the position and deletion status of the word
+let wordIndex = 0;
+let charIndex = 0;
+let isDeleting = false;
+
+const typeEffect = () => {
+    const currentWord = words[wordIndex];
+    const currentChar = currentWord.substring(0, charIndex);
+    dynamicText.textContent = currentChar;
+    dynamicText.classList.add("stop-blinking");
+
+    if (!isDeleting && charIndex < currentWord.length) {
+        // If condition is true, type the next character
+        charIndex++;
+        setTimeout(typeEffect, 200);
+    } else if (isDeleting && charIndex > 0) {
+        // If condition is true, remove the previous character
+        charIndex--;
+        setTimeout(typeEffect, 100);
+    } else {
+        // If word is deleted then switch to the next word
+        isDeleting = !isDeleting;
+        dynamicText.classList.remove("stop-blinking");
+        wordIndex = !isDeleting ? (wordIndex + 1) % words.length : wordIndex;
+        setTimeout(typeEffect, 1200);
+    }
+}
+
+typeEffect();
+
+  
+
+
+
+  
 
 window.addEventListener('load', function () {
   document.getElementById('loading').style.display = 'none';
