--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <h1>Cointapz is <span></span></h1>
 
 <div class="description">
-  <div>Telegram Crypto Mining Bots to Maximize Your Earnings 😉<br>
-   به کانال خودتون هم سر بزنید، کلی اخبار جذاب داریم</div>
+  <div>Telegram Crypto Mining Bots to Maximize Your Earnings 😉
+   </div>
     <!-- 
   <pre>📅 Last Update: June 2024<pre id="botsCount"></pre></pre>
    !-->
