--- a/index.html
+++ b/index.html
@@ -1761,7 +1761,7 @@
 
 
 const dynamicText = document.querySelector("h1 span");
-const words = ["Love", "Like No One Else", "the Future", "Everything"];
+const words = ["Love ❤️", "Like No One Else", "the Future", "Everything"];
 
 // Variables to track the position and deletion status of the word
 let wordIndex = 0;
