--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 
 
-    <label for="themeToggle" class="theme">
+    <label for="themeToggle">
         <img src="light.svg" alt="Light Theme" id="lightImage">
         <img src="dark.svg" alt="Dark Theme" id="darkImage" style="display: none;">
     </label>
@@ -1767,7 +1767,7 @@
 <script>
 
   // theme
-          const themeToggle = document.getElementById("themeToggle");
+        const themeToggle = document.getElementById("themeToggle");
         const themeStylesheet = document.getElementById("themeStylesheet");
         const lightImage = document.getElementById("lightImage");
         const darkImage = document.getElementById("darkImage");
