--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 
 
-    <label for="themeToggle">
+    <label for="themeToggle" class="theme">
         <img src="light.svg" alt="Light Theme" id="lightImage">
         <img src="dark.svg" alt="Dark Theme" id="darkImage" style="display: none;">
     </label>
