--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
 </div>
 
 
-    <label for="themeToggle" class="theme">
+  <div class="theme">
+    <label for="themeToggle">
         <img src="light.svg" alt="Light Theme" id="lightImage">
         <img src="dark.svg" alt="Dark Theme" id="darkImage" style="display: none;">
     </label>
     <input type="checkbox" id="themeToggle" style="display: none;">
+    </div>
 
 
   
